Fix stars-display stretching full width in flex container

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -348,6 +348,7 @@ a { color: inherit; }
 .stars-display {
   position: relative;
   display: inline-block;
+  align-self: flex-start;
   font-size: 0.92rem;
   line-height: 1;
   letter-spacing: 0.14em;
